Fixed some layout problems --- It was related with the navs (mobile and desktop)

--- a/public/style.css
+++ b/public/style.css
@@ -41,7 +41,6 @@ ul li a:hover{
   font-size:25px;
   text-align:center;
 }
-
 .content form{
   margin-top:7%;
 }
@@ -49,11 +48,6 @@ ul li a:hover{
   margin-top: 5%;
   font-size:50px;
 }
-
-.content .bg-info{
-  font-size:15px;
-}
-
 .footer{
   margin-top:15%;
   font-size:20px;
